fix(Inputs): confirm password label and message input maxLength

--- a/mobApp/pv239-project/Resources/i18n/AppTexts.resx
+++ b/mobApp/pv239-project/Resources/i18n/AppTexts.resx
@@ -58,7 +58,7 @@
         <value>Password</value>
     </data>
     <data name="CreateNewUserPage.ConfirmPasswordPlaceholder" xml:space="preserve">
-        <value>Surname</value>
+        <value>Confirm Password</value>
     </data>
     <data name="CreateNewUserPage.SignUpButtonText" xml:space="preserve">
         <value>Sign Up</value>
