--- a/mobApp/pv239-project/Resources/i18n/AppTexts.resx
+++ b/mobApp/pv239-project/Resources/i18n/AppTexts.resx
@@ -21,6 +21,12 @@
     <data name="LoginPage.WelcomeText" xml:space="preserve">
         <value>Welcome</value>
     </data>
+    <data name="LoginPage.EmptyFields" xml:space="preserve">
+        <value>Please fill in all input fields</value>
+    </data>
+    <data name="LoginPage.GeneralError" xml:space="preserve">
+        <value>An error occurred while logging in. Please check your credentials and try again.</value>
+    </data>
     <data name="LoginPage.LoginText" xml:space="preserve">
         <value>Please login or create a new account</value>
     </data>
@@ -44,6 +50,24 @@
     </data>
     <data name="ConversationListPage.PageLabel" xml:space="preserve">
         <value>Conversations</value>
+    </data>
+    <data name="CreateNewUserPage.InputError" xml:space="preserve">
+        <value>Please fill in all input fields</value>
+    </data>
+    <data name="CreateNewUserPage.PasswordLengthError" xml:space="preserve">
+        <value>Password must be at least 6 characters long</value>
+    </data>
+    <data name="CreateNewUserPage.ConfirmPasswordLengthError" xml:space="preserve">
+        <value>Confirm password must be at least 6 characters long</value>
+    </data>
+    <data name="CreateNewUserPage.PasswordsNotSame" xml:space="preserve">
+        <value>Passwords do not match</value>
+    </data>
+    <data name="CreateNewUserPage.GeneralError" xml:space="preserve">
+        <value>An error occurred while creating the user. Please check internet connection and try again.</value>
+    </data>
+    <data name="CreateNewUserPage.Title" xml:space="preserve">
+        <value>Registration</value>
     </data>
     <data name="CreateNewUserPage.FirstNamePlaceholder" xml:space="preserve">
         <value>Firstname</value>
@@ -98,5 +122,11 @@
     </data>
     <data name="UploadProfilePicturePopup.SubmitButtonText" xml:space="preserve">
         <value>Submit</value>
+    </data>
+    <data name="ConversationDetailPage.FailedToSendMessageError" xml:space="preserve">
+        <value>Failed to send message. Please check your internet connection and try again.</value>
+    </data>
+    <data name="ConversationDetailPage.LoadingError" xml:space="preserve">
+        <value>Failed to load conversation. Please check your internet connection and try again.</value>
     </data>
 </root>
